[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/BossHealthBar/BossHealthBar.gd" type="Script" id=1]
[ext_resource path="res://GUI/HpBar/HpBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/GUI/Progress_Blue.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://GUI/HpText/HpText.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/GUI/Icons/SkullIcon.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 36, 230 ), Vector2( 36, 251 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 36, 251 ), Vector2( 36, 230 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="BossHealthBar" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SecondaryBar" parent="Control" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = 11.0
margin_right = 92.0
margin_bottom = 19.0

[node name="HpBar" parent="Control/SecondaryBar" index="1"]
texture_progress = ExtResource( 3 )

[node name="BossNameLabel" type="Label" parent="Control/SecondaryBar"]
margin_left = 12.0
margin_top = -8.0
margin_right = 52.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 4 )
text = "Boss"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/SecondaryBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -39.0
margin_top = -7.0
margin_right = 1.0
margin_bottom = 3.0
custom_constants/separation = 1
alignment = 2
__meta__ = {
"_edit_group_": true
}

[node name="HpText" parent="Control/SecondaryBar/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 23.0
margin_right = 31.0
margin_bottom = 11.0

[node name="PercentageLabel" type="Label" parent="Control/SecondaryBar/HBoxContainer"]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )
text = "%"
align = 2

[node name="BossIcon" type="TextureRect" parent="Control/SecondaryBar"]
margin_left = -11.0
margin_top = -6.0
margin_right = 5.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="ShowHidePlayer" type="AnimationPlayer" parent="Control/SecondaryBar"]
anims/Hide = SubResource( 1 )
anims/Show = SubResource( 2 )

[node name="FillUpSignalTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FillUpSignalTimer" to="." method="_on_FillUpSignalTimer_timeout"]

[editable path="Control/SecondaryBar"]
